<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_pizza">PizzaActivity</string>


    <string name="pepperoni">Pepperoni</string>
    <string name="view_order">View Order</string>
    <string name="store_orders">Store Orders</string>
    <string name="hawaiian">Hawaiian</string>
    <string name="deluxe">Deluxe</string>
    <string name="phone_number">Phone Number:</string>
    <string name="size">Size</string>
    <string name="add_to_order">Add to Order</string>
    <string name="tap_to_add">Tap to Add</string>
    <string name="tap_to_remove">Tap to Remove</string>
    <string name="remove_pizza">Remove Pizza</string>
    <string name="remove_order">Remove Order</string>
    <string name="place_order">Place Order</string>

</resources>