<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewActivity">

    <TextView
        android:id="@+id/salesTax"
        android:layout_width="191dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtotal" />

    <TextView
        android:id="@+id/total"
        android:layout_width="191dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salesTax" />

    <ListView
        android:choiceMode="singleChoice"
        android:listSelector="#666666"
        android:id="@+id/pizzas"
        android:layout_width="384dp"
        android:layout_height="374dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:longClickable="true"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbars="horizontal|vertical"
        android:textFilterEnabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/phoneNumberOrder"
        android:layout_width="304dp"
        android:layout_height="23dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/phone_number"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/pizzas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtotal"
        android:layout_width="191dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:textAlignment="textStart"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzas" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:onClick="addToOrder"
        android:text="@string/place_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzas" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:onClick="removePizza"
        android:text="@string/remove_pizza"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizzas" />

</androidx.constraintlayout.widget.ConstraintLayout>